--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device, initial-scale=1.0">
     <title>My Personal Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/dfdca05d82.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <div id="header">
@@ -107,6 +108,8 @@
                 <h3 class="subtitle">Contact Me</h3>
                 <p>cabeltesmark@gmail.com</p>
                 <p>09978857185</p>
+                <a style="margin-left: 15%; font-size: 40px;" href="https://www.facebook.com/CabeltesMarkAnthony/"><i class="fa-brands fa-facebook"></i></a>
+        <a style="margin-left: 15%; font-size: 40px;" href="https://www.instagram.com/cabeltesmarkanthony/"><i class="fa-brands fa-instagram"></i></a>
                 <div class = "socialicons">
                     <a href="https://www.facebook.com/CabeltesMarkAnthony/"><i class = "fa-brands fa-facebook"></i></a>
                     <a href=""><i class = "fa-brands fa-github"></i></a>
