--- a/index.html
+++ b/index.html
@@ -108,11 +108,12 @@
                 <h3 class="subtitle">Contact Me</h3>
                 <p>cabeltesmark@gmail.com</p>
                 <p>09978857185</p>
-                <a style="margin-left: 15%; font-size: 40px;" href="https://www.facebook.com/CabeltesMarkAnthony/"><i class="fa-brands fa-facebook"></i></a>
-        <a style="margin-left: 15%; font-size: 40px;" href="https://www.instagram.com/cabeltesmarkanthony/"><i class="fa-brands fa-instagram"></i></a>
+                
                 <div class = "socialicons">
-                    <a href="https://www.facebook.com/CabeltesMarkAnthony/"><i class = "fa-brands fa-facebook"></i></a>
-                    <a href=""><i class = "fa-brands fa-github"></i></a>
+                    <a style="margin-left: 15%; font-size: 40px;" href="https://www.facebook.com/CabeltesMarkAnthony/"><i class="fa-brands fa-facebook"></i></a>
+                    <a style="margin-left: 15%; font-size: 40px;" href="https://www.instagram.com/cabeltesmarkanthony/"><i class="fa-brands fa-instagram"></i></a>
+                    <a style="margin-left: 15%; font-size: 40px;" href=""><i class = "fa-brands fa-github"></i></a>
+            
                 </div>
             </div>
         </div>
